--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Foodie Delight 🍔</title>
-<link rel="stylesheet" href="Food.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
@@ -31,6 +31,7 @@
     <button id="checkout-btn">Checkout</button>
   </div>
 
-  <script src="Food.js"></script>
+  <script src="script.js"></script>
 </body>
+
 </html>
